# docs/swagger.json
@@ -11,11 +11,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3000",
-      "description": "Local server"
-    },
-    {
-      "url": "https://goit-project-02-front-end.onrender.com",
+      "url": "https://goit-project-02-front-end-smoky.vercel.app",
       "description": "Frontend application"
     },
     {
@@ -26,7 +22,9 @@
   "paths": {
     "/boards": {
       "get": {
-        "tags": ["Boards"],
+        "tags": [
+          "Boards"
+        ],
         "summary": "Get list of boards",
         "operationId": "getBoards",
         "description": "Get list of boards with this endpoint",
@@ -42,7 +40,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -141,7 +143,9 @@
         }
       },
       "post": {
-        "tags": ["Boards"],
+        "tags": [
+          "Boards"
+        ],
         "summary": "Create board",
         "operationId": "createBoard",
         "description": "Create a board with payload",
@@ -167,7 +171,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -193,7 +201,9 @@
     },
     "/boards/{id}": {
       "get": {
-        "tags": ["Boards"],
+        "tags": [
+          "Boards"
+        ],
         "summary": "Get list of boards",
         "operationId": "getBoard",
         "description": "Get list of boards with this endpoint",
@@ -220,7 +230,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -247,7 +261,9 @@
         }
       },
       "patch": {
-        "tags": ["Boards"],
+        "tags": [
+          "Boards"
+        ],
         "summary": "Update board",
         "operationId": "updateBoard",
         "description": "Update a board with payload",
@@ -284,7 +300,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -311,7 +331,9 @@
         }
       },
       "delete": {
-        "tags": ["Boards"],
+        "tags": [
+          "Boards"
+        ],
         "summary": "Delete board",
         "operationId": "deleteBoard",
         "description": "Delete a board with payload",
@@ -346,7 +368,9 @@
     },
     "/columns": {
       "post": {
-        "tags": ["Columns"],
+        "tags": [
+          "Columns"
+        ],
         "summary": "Create column",
         "operationId": "createColumn",
         "description": "Create a column with payload",
@@ -372,7 +396,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -398,7 +426,9 @@
     },
     "/columns/{id}": {
       "patch": {
-        "tags": ["Columns"],
+        "tags": [
+          "Columns"
+        ],
         "summary": "Update column",
         "operationId": "updateColumn",
         "description": "Update a column with payload",
@@ -435,7 +465,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -462,7 +496,9 @@
         }
       },
       "delete": {
-        "tags": ["Columns"],
+        "tags": [
+          "Columns"
+        ],
         "summary": "Delete column",
         "operationId": "deleteColumn",
         "description": "Delete a column with payload",
@@ -497,7 +533,9 @@
     },
     "/tasks": {
       "post": {
-        "tags": ["Tasks"],
+        "tags": [
+          "Tasks"
+        ],
         "summary": "Create task",
         "operationId": "createTask",
         "description": "Create a task with payload",
@@ -523,7 +561,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -549,7 +591,9 @@
     },
     "/tasks/{id}": {
       "patch": {
-        "tags": ["Tasks"],
+        "tags": [
+          "Tasks"
+        ],
         "summary": "Update task",
         "operationId": "updateTask",
         "description": "Update a task with payload",
@@ -586,7 +630,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -613,7 +661,9 @@
         }
       },
       "delete": {
-        "tags": ["Tasks"],
+        "tags": [
+          "Tasks"
+        ],
         "summary": "Delete task",
         "operationId": "deleteTask",
         "description": "Delete a task with payload",
@@ -648,7 +698,9 @@
     },
     "/auth/register": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Register a new user",
         "operationId": "registerUser",
         "security": [],
@@ -659,7 +711,11 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": ["name", "email", "password"],
+                "required": [
+                  "name",
+                  "email",
+                  "password"
+                ],
                 "properties": {
                   "name": {
                     "type": "string",
@@ -685,7 +741,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -734,7 +794,9 @@
     },
     "/auth/login": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Login user",
         "operationId": "loginUser",
         "security": [],
@@ -745,7 +807,10 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": ["email", "password"],
+                "required": [
+                  "email",
+                  "password"
+                ],
                 "properties": {
                   "email": {
                     "type": "string",
@@ -767,7 +832,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -821,7 +890,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Logout user",
         "operationId": "logoutUser",
         "description": "Logout the current user and clear session cookies.",
@@ -854,7 +925,9 @@
     },
     "/auth/get-oauth-url": {
       "get": {
-        "tags": ["Auth with Google"],
+        "tags": [
+          "Auth with Google"
+        ],
         "summary": "Get Google OAuth URL",
         "description": "Get the URL where users can log in via Google OAuth.\nOnce the user is authenticated with Google, they will be redirected to your application.\n",
         "security": [],
@@ -897,7 +970,9 @@
     },
     "/auth/confirm-google-auth": {
       "post": {
-        "tags": ["Auth with Google"],
+        "tags": [
+          "Auth with Google"
+        ],
         "summary": "Confirm Google OAuth",
         "description": "Confirm Google OAuth by sending the authorization code obtained after user authentication.\nReturns an access token if the authentication is successful.\n",
         "security": [],
@@ -965,7 +1040,9 @@
     },
     "/user/profile": {
       "get": {
-        "tags": ["User"],
+        "tags": [
+          "User"
+        ],
         "summary": "Get user profile",
         "description": "Retrieve the profile information of the authenticated user.",
         "operationId": "getUserProfile",
@@ -1008,6 +1085,15 @@
                         "photo": {
                           "type": "string",
                           "example": "https://cloudinary.com/johndoe_profile.jpg"
+                        },
+                        "theme": {
+                          "type": "string",
+                          "enum": [
+                            "light",
+                            "violet",
+                            "dark"
+                          ],
+                          "example": "violet"
                         },
                         "createdAt": {
                           "type": "string",
@@ -1072,7 +1158,9 @@
         "summary": "Update user profile",
         "operationId": "updateProfile",
         "description": "This endpoint allows an authenticated user to update their profile information.",
-        "tags": ["User"],
+        "tags": [
+          "User"
+        ],
         "security": [
           {
             "bearerAuth": []
@@ -1103,6 +1191,16 @@
                     "type": "string",
                     "format": "binary",
                     "description": "Profile photo to upload"
+                  },
+                  "theme": {
+                    "type": "string",
+                    "description": "Application themes",
+                    "enum": [
+                      "light",
+                      "violet",
+                      "dark"
+                    ],
+                    "example": "violet"
                   }
                 }
               }
@@ -1143,6 +1241,10 @@
                         "photo": {
                           "type": "string",
                           "example": "https://res.cloudinary.com/.../user-photo.jpg"
+                        },
+                        "theme": {
+                          "type": "string",
+                          "example": "violet"
                         },
                         "createdAt": {
                           "type": "string",
@@ -1191,7 +1293,11 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": ["status", "message", "data"],
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -1203,7 +1309,9 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": ["message"],
+                  "required": [
+                    "message"
+                  ],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -1222,7 +1330,11 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": ["status", "message", "data"],
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -1234,7 +1346,9 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": ["message"],
+                  "required": [
+                    "message"
+                  ],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -1251,7 +1365,10 @@
     "schemas": {
       "postReqBody": {
         "type": "object",
-        "required": ["title", "iconId"],
+        "required": [
+          "title",
+          "iconId"
+        ],
         "properties": {
           "title": {
             "description": "Board's title",
@@ -1261,7 +1378,16 @@
           "iconId": {
             "description": "Board's icon id",
             "type": "string",
-            "enum": ["ic1", "ic2", "ic3", "ic4", "ic5", "ic6", "ic7", "ic8"]
+            "enum": [
+              "ic1",
+              "ic2",
+              "ic3",
+              "ic4",
+              "ic5",
+              "ic6",
+              "ic7",
+              "ic8"
+            ]
           },
           "backgroundId": {
             "description": "Board's background id",
@@ -1324,7 +1450,12 @@
           "priority": {
             "description": "Task's priority",
             "type": "string",
-            "enum": ["without priority", "low", "medium", "high"]
+            "enum": [
+              "without priority",
+              "low",
+              "medium",
+              "high"
+            ]
           },
           "userId": {
             "description": "Task's owner id",
@@ -1425,7 +1556,16 @@
           "iconId": {
             "description": "Board's icon id",
             "type": "string",
-            "enum": ["ic1", "ic2", "ic3", "ic4", "ic5", "ic6", "ic7", "ic8"]
+            "enum": [
+              "ic1",
+              "ic2",
+              "ic3",
+              "ic4",
+              "ic5",
+              "ic6",
+              "ic7",
+              "ic8"
+            ]
           },
           "backgroundId": {
             "description": "Board's background id",
@@ -1484,7 +1624,16 @@
           "iconId": {
             "description": "Board's icon id",
             "type": "string",
-            "enum": ["ic1", "ic2", "ic3", "ic4", "ic5", "ic6", "ic7", "ic8"]
+            "enum": [
+              "ic1",
+              "ic2",
+              "ic3",
+              "ic4",
+              "ic5",
+              "ic6",
+              "ic7",
+              "ic8"
+            ]
           },
           "backgroundId": {
             "description": "Board's background id",
@@ -1512,7 +1661,10 @@
       },
       "postReqBody-2": {
         "type": "object",
-        "required": ["title", "boardId"],
+        "required": [
+          "title",
+          "boardId"
+        ],
         "properties": {
           "title": {
             "description": "Column's title",
@@ -1569,7 +1721,12 @@
           "priority": {
             "description": "Task's priority",
             "type": "string",
-            "enum": ["without priority", "low", "medium", "high"]
+            "enum": [
+              "without priority",
+              "low",
+              "medium",
+              "high"
+            ]
           },
           "columnId": {
             "description": "Task's column id",
@@ -1599,7 +1756,12 @@
           "priority": {
             "description": "Task's priority",
             "type": "string",
-            "enum": ["without priority", "low", "medium", "high"]
+            "enum": [
+              "without priority",
+              "low",
+              "medium",
+              "high"
+            ]
           },
           "columnId": {
             "description": "Task's column id",
